# cross-venue-semantic

./: .gitignore  MONITOR_QUICKSTART.md  README.md  RIOT_API_RATE_LIMITS.md  __init__.py  __main__.py  check_db_for_polymarket_market.py  check_esports_pairs.py  config.py  diagnose_verification.py  download_models.py  fetch_polymarket_game3.py  gpu_utils.py  investigate_esports_matching.py  monitor_dk_vs_t1.py  orchestrator.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_testing.ps1  setup_testing.sh  spread_scanner.py  spread_scanner_ws.py  spread_scanner_ws_esports.py  test_quick.sh  verify_market_equivalence.py
canonicalization/: __init__.py  contract_spec.py  hasher.py  text_builder.py  types.py
canonicalization/tests/: __init__.py  conftest.py  pytest.ini  test_contract_spec.py  test_contract_spec_edge_cases.py  (+7 more)
discovery/: __init__.py  base_connector.py  dedup.py  example_add_venue.py  example_usage.py  kalshi_poller.py  polymarket_poller.py  types.py  venue_factory.py
embedding/: __init__.py  cache.py  encoder.py  index.py  populate_test_data.py  processor.py  types.py
extraction/: __init__.py  circuit_breaker.py  llm_fallback.py  spec_extractor.py
matching/: __init__.py  cross_encoder.py  llm_verifier.py  pair_verifier.py  reranker.py  retriever.py  types.py
monitoring/: __init__.py
orchestrator/: __init__.py  core.py  exceptions.py  metrics.py
orchestrator_tests/: conftest.py  test_bootstrap.py  test_integration.py  test_orchestrator.py
persistence/: __init__.py  writer.py
scripts/: __init__.py  verify_kalshi_auth.py
(+105 files in other folders)
