[project]
name = "semantic-pipeline"
version = "0.1.0"
description = "Market discovery and semantic matching pipeline for PolyEdge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "redis>=5.0.0",
    "h5py>=3.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "discovery", "discovery.*",
    "canonicalization", "canonicalization.*",
    "embedding", "embedding.*",
    "matching", "matching.*",
    "extraction", "extraction.*",
    "persistence", "persistence.*",
    "orchestrator_tests", "orchestrator_tests.*",
]
exclude = ["venv", "venv.*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

